# e1-aws

./: .env.example  .gitignore  LICENSE  README.md  local_uploader.py  pyproject.toml  run_uploader.sh
lambda/: lambda_function.py
src/api/: settings.py
src/data_ingestion/: database.py  models.py  settings.py
src/shared/: logging_config.py  settings.py
