[project]
name = "e1-aws"
version = "0.1.0"
description = "Automated Excel to MySQL data ingestion workflow and REST API"
authors = [
    { name = "Gregory MARTIN", email = "gregory.martin.data@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.12"  # Stable, pinned to avoid issues with 3.13+ compatibility
dependencies = [
    "pandas>=2.3.0",
    "pydantic-settings>=2.9.1",
    "pymysql>=1.1.1",
]

[tool.ruff]
line-length = 120
target-version = "py312" # Set target Python version for Ruff
# List of rules to enable/disable. We'll start with a common set.

[tool.ruff.lint]
select = [
    "E",   # Error
    "F",   # Pyflakes
    "W",   # Warning
    "I",   # Isort
    "C90", # Complexity
    "N",   # Naming
    "D",   # Docstrings (we'll enforce these)
    "UP",  # pyupgrade
    "ANN", # Annotations (this selects all ANN rules including ANN101, ANN102)
    "ARG", # Arguments
    "B",   # Bugbear
    "C",   # Complexity (from flake8-comprehensions, etc.)
    "G",   # Flake8-logging-format
    "TID", # Tidiness

]
ignore = [
    "D100", # Missing docstring in public module
    "D104", # Missing docstring in public package
    "D211", # Incompatible with D203 (no blank line before class docstring) - choose D203
    "D213", # Incompatible with D212 (multi-line summary first line) - choose D212
]

[tool.ruff.lint.per-file-ignores]
# Ignore docstring rules in tests for now
"tests/*" = ["D"]
# Ignore specific rules for __init__.py files
"**/__init__.py" = ["F401"] # F401: `from x import y` imported but unused

[tool.ruff.format]
# Enable Ruff's formatter

indent-style = "space"
quote-style = "double"

[build-system]
requires = ["setuptools>=61.0"] # Changed from uv to setuptools
build-backend = "setuptools.build_meta" # Changed from uv.build

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "ruff>=0.11.13",
]
